[package]
name = "otel-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "0.28.0"
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.28.0"
opentelemetry_sdk = "0.28.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.29.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
